--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,17 @@
 {
   "cSpell.words": [
+    "Cypher",
+    "graphdatascience",
     "linspace",
     "matplotlib",
     "pyplot",
     "savefig",
     "simplejson",
-    "venv"
-  ]
+    "venv",
+    "yoloyolo"
+  ],
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.black-formatter"
+  },
+  "python.formatting.provider": "none"
 }
