Update the workspace dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,35 @@
 {
   "cSpell.words": [
+    "Balshaw",
+    "betweenness",
+    "Carstairs",
+    "Coseley",
+    "Crewe",
+    "Curriehill",
     "Cypher",
+    "Euxton",
     "graphdatascience",
+    "Hailes",
+    "Haymarket",
+    "Kingsknowe",
+    "Kirknewton",
+    "Lancs",
+    "Leyland",
     "linspace",
+    "Lockerbie",
     "matplotlib",
+    "Oxenholme",
+    "Penkridge",
+    "Penrith",
     "pyplot",
+    "Sandwell",
     "savefig",
     "simplejson",
+    "Slateford",
+    "Smethwick",
+    "Tipton",
     "venv",
+    "Winsford",
     "yoloyolo"
   ],
   "[python]": {
